[project]
name = "world-population"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anywidget>=0.9.14",
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
